# growing_neural_gas

./: .gitignore  README.md  build.sh  docker_bringup.sh
.github/workflows/: build.yml
docker/: Dockerfile  docker-compose.yaml
example/: CMakeLists.txt  growing_neural_gas.cpp
utilities/: growing_neural_gas.hpp  plot_helper.hpp
